src/sass/components/_searchBar.scss
@use "../abstracts" as *;

.wrapper {
  position: relative;
  width: 100vw;
  max-width: 498px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  // margin: .5rem 0;

  .searchBar {
    width: 87.5vw;
    max-width: 500px;
    display: flex;
    justify-content: center;
    align-items: center;

    
    
    #searchQueryInput {
      width: 100%;
      max-width: 498px;
      height: 2.5rem;
      background: #f5f5f5;
      outline: none;
      border: none;
      border-top-left-radius: 1.625rem;
      border-bottom-left-radius: 1.625rem;
      padding: 0 3.5rem 0 1.5rem;
      font-size: 1rem;
      z-index: 999;

 
    }
    
    #searchQuerySubmit {
      width: 2.5rem;
      height: 2.5rem;
      background: #f5f5f5;
      border: none;
      outline: none;
      border-top-right-radius: 1.625rem;
      border-bottom-right-radius: 1.625rem;
      z-index: 999;
      
      &:hover {
        cursor: pointer;
      }
   
    }
    
  }
  .suggestions {
    position: absolute;
    top: 53%;
    width: 87vw;
    max-width: 497px;
    height: 265px;
    margin: 0 auto;
    // margin-left: 1px;
    background-color: #1c1a1a;
    border: 1px solid #dddddd;
    border-top: none;
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;
    overflow-y: scroll;
    z-index: 998;

   :nth-child(1) {
    margin-top: 1.9rem;
   }

   .suggestion {
    cursor: pointer;
    padding: 0 1.3rem;
   }
  }

}

